# youtube-video-generator

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  auto_threads.py  genz_slang.json  pinterest_scraper.py  pipeline.py  run.sh  run_historical_demo.py  run_news_video.py  run_reaction_demo.py  run_threads_genz_real.py  run_threads_scroll_demo.py  run_threads_video.py  run_truecrime_demo.py
.agents/skills/testing-video-generator/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py  script_generator.py  subtitle_generator.py  tts_service.py  video_renderer.py
video/: package-lock.json  package.json  tsconfig.json
video/src/: HistoricalVideo.tsx  ReactionVideo.tsx  Root.tsx  ThreadsScrollVideo.tsx  TrueCrimeVideo.tsx  YouTubeVideo.tsx  render.ts  types.ts
video/src/components/: Background.tsx  Highlight.tsx  LowerThird.tsx  OutroCard.tsx  Particles.tsx  PlaidBackground.tsx  ProgressBar.tsx  RatingBar.tsx  ReactionBar.tsx  ReactionScene.tsx  Scene.tsx  Subtitles.tsx  ThreadsCard.tsx  Timeline.tsx  TitleCard.tsx  Transition.tsx  TrueCrimeScene.tsx
