[project]
name = "youtube-video-generator"
version = "0.1.0"
description = "AI-powered multilingual YouTube video generator using DeepSeek, F5-TTS, and Remotion"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=6.1.0",
    "pyyaml>=6.0.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
f5tts = [
    "f5-tts>=1.0.0",
]
auto = [
    "playwright>=1.40.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
